[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/board.gd" id="2_board"]
[ext_resource type="FontFile" uid="uid://font_chill" path="res://assets/fonts/ChillJinshuSongRegular.woff" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.12, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Theme" id="Theme_cn"]
default_font = ExtResource("3_font")
default_font_size = 16

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.18, 0.22, 0.16, 1)

[node name="Board" type="Node2D" parent="."]
script = ExtResource("2_board")
cell_size = Vector2(48, 48)
board_color = Color(0.45, 0.3, 0.15, 1)
cell_color = Color(0.75, 0.6, 0.4, 1)
highlight_color = Color(0.4, 0.8, 0.4, 0.6)

[node name="PegsContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cn")

[node name="GameInfo" type="VBoxContainer" parent="UI/UIRoot"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 160.0

[node name="Title" type="Label" parent="UI/UIRoot/GameInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "独立钻石棋"
horizontal_alignment = 1

[node name="PegCount" type="Label" parent="UI/UIRoot/GameInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "剩余棋子: 32"

[node name="Rating" type="Label" parent="UI/UIRoot/GameInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""

[node name="Instructions" type="Label" parent="UI/UIRoot/GameInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "点击选择棋子
再点击空位跳跃
吃掉中间的棋子"

[node name="RestartBtn" type="Button" parent="UI/UIRoot"]
offset_left = 20.0
offset_top = 540.0
offset_right = 150.0
offset_bottom = 580.0
text = "重新开始"

[node name="CloseBtn" type="Button" parent="UI/UIRoot"]
offset_left = 740.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 60.0
text = "X"
theme_override_font_sizes/font_size = 20

[node name="AboutBtn" type="Button" parent="UI/UIRoot"]
offset_left = 700.0
offset_top = 540.0
offset_right = 780.0
offset_bottom = 580.0
text = "关于"

[node name="AboutPanel" type="Panel" parent="UI/UIRoot"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UIRoot/AboutPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0

[node name="Title" type="Label" parent="UI/UIRoot/AboutPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "关于"
horizontal_alignment = 1

[node name="Author" type="Label" parent="UI/UIRoot/AboutPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "作者: 毛伢一"
horizontal_alignment = 1

[node name="CatCredits" type="Label" parent="UI/UIRoot/AboutPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "猫猫素材:
toffeecraft @ itch.io
carysaurus @ itch.io"
horizontal_alignment = 1

[node name="AINote" type="Label" parent="UI/UIRoot/AboutPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "本游戏由 AI 生成"
horizontal_alignment = 1

[node name="CloseAboutBtn" type="Button" parent="UI/UIRoot/AboutPanel/VBoxContainer"]
layout_mode = 2
text = "关闭"

[node name="GameOverPanel" type="Panel" parent="UI/UIRoot"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UIRoot/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="GameOverTitle" type="Label" parent="UI/UIRoot/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "游戏结束!"
horizontal_alignment = 1

[node name="RatingResult" type="Label" parent="UI/UIRoot/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "评级: 天才"
horizontal_alignment = 1

[node name="PegCountResult" type="Label" parent="UI/UIRoot/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "剩余棋子: 1"
horizontal_alignment = 1

[node name="PlayAgainBtn" type="Button" parent="UI/UIRoot/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "再玩一次"

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="MeowPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="HissPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -3.0

[connection signal="pressed" from="UI/UIRoot/RestartBtn" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/UIRoot/CloseBtn" to="." method="_on_close_pressed"]
[connection signal="pressed" from="UI/UIRoot/AboutBtn" to="." method="_on_about_pressed"]
[connection signal="pressed" from="UI/UIRoot/AboutPanel/VBoxContainer/CloseAboutBtn" to="." method="_on_close_about_pressed"]
[connection signal="pressed" from="UI/UIRoot/GameOverPanel/VBoxContainer/PlayAgainBtn" to="." method="_on_restart_pressed"]
